fixed header on mobile

--- a/resources/styles/photography.css
+++ b/resources/styles/photography.css
@@ -1,5 +1,6 @@
 #gallery {
   min-height: calc(100vh - var(--header-height));
+  width: 100%;
 }
 body {
   background-position: relative;
